--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Virtual mode of board game Combat",
   "main": "build/src/start.js",
   "scripts": {
+    "start": "tsc --build & node .\\build\\src\\start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
